<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/relative_title"
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <ImageView
                android:id="@+id/image_import_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="21dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:src="@mipmap/ic_return" />

            <TextView
                android:id="@+id/text_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/title_batch_import"
                android:textColor="@color/white"
                android:textSize="@dimen/title_font" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:layout_alignParentBottom="true"
                android:background="@color/colorLine" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relative_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/relative_title"
            android:layout_marginLeft="49dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="49dp"
            android:background="@drawable/bg_round_import"
            android:paddingLeft="20dp"
            android:paddingTop="15dp"
            android:paddingRight="20dp"
            android:paddingBottom="15dp">

            <TextView
                android:id="@+id/text_content_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_import_steps"
                android:textColor="#999999"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/text_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_content_title"
                android:layout_marginTop="12dp"
                android:lineSpacingExtra="6dp"
                android:text="@string/step_one"
                android:textColor="#CCCCCC"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/text_tip1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_content_title"
                android:layout_marginTop="12dp"
                android:layout_toRightOf="@id/text_1"
                android:lineSpacingExtra="6dp"
                android:text="@string/import_tip_1"
                android:textColor="#CCCCCC"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/text_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_tip1"
                android:layout_marginTop="10dp"
                android:lineSpacingExtra="6dp"
                android:text="@string/step_two"
                android:textColor="#CCCCCC"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/text_tip2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_tip1"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/text_2"
                android:lineSpacingExtra="6dp"
                android:text="@string/import_tip_2"
                android:textColor="#CCCCCC"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/text_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_tip2"
                android:layout_marginTop="10dp"
                android:lineSpacingExtra="6dp"
                android:text="@string/step_three"
                android:textColor="#CCCCCC"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/text_tip3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_tip2"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/text_3"
                android:lineSpacingExtra="6dp"
                android:text="@string/import_tip_3"
                android:textColor="#CCCCCC"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/text_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_tip3"
                android:layout_marginTop="10dp"
                android:lineSpacingExtra="6dp"
                android:text="@string/step_four"
                android:textColor="#CCCCCC"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/text_tip4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_tip3"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/text_4"
                android:lineSpacingExtra="6dp"
                android:text="@string/import_tip_4"
                android:textColor="#CCCCCC"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/text_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_tip4"
                android:layout_marginTop="10dp"
                android:lineSpacingExtra="6dp"
                android:text="@string/step_five"
                android:textColor="#CCCCCC"
                android:textSize="14sp" />


            <TextView
                android:id="@+id/text_tip5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_tip4"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/text_5"
                android:lineSpacingExtra="6dp"
                android:text="@string/import_tip_5"
                android:textColor="#CCCCCC"
                android:textSize="14sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/linear_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relative_content"
            android:layout_marginLeft="49dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="49dp"
            android:layout_marginBottom="-15dp"
            android:background="@drawable/bg_round_import_file"
            android:paddingTop="13dp"
            android:paddingBottom="13dp"
            android:visibility="gone">

            <ImageView
                android:id="@+id/image_file"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:src="@mipmap/icon_folder" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@id/image_file"
                android:gravity="center_vertical"
                android:text="@string/file_uploaded"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/image_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="13dp"
                android:src="@mipmap/icon_input_delete" />
        </RelativeLayout>

        <TextView
            android:id="@+id/button_import"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear_show"
            android:layout_marginLeft="49dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="49dp"
            android:background="@drawable/button_selector"
            android:gravity="center"
            android:text="@string/btn_import_data"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <!--百度大脑技术支持-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:text="@string/bottom_content"
            android:textColor="@color/bottom_font_color"
            android:textSize="@dimen/bottom_font" />

        <!--黑色背景-->
        <View
            android:id="@+id/view_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#7000"
            android:visibility="invisible" />

        <!--导入进度条-->
        <RelativeLayout

            android:id="@+id/relative_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/top_round"
            android:visibility="invisible">

            <RelativeLayout
                android:id="@+id/relative_progress_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/top_round">

                <TextView
                    android:id="@+id/text_progress_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp"
                    android:text="@string/progress_importing"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/text_title_finish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp"
                    android:text="@string/progress_finished"
                    android:textColor="#00BAF2"
                    android:textSize="18sp"
                    android:visibility="gone" />

                <!--圆形进度条-->
                <RelativeLayout
                    android:id="@+id/relative_progress_bar"
                    android:layout_width="108dp"
                    android:layout_height="108dp"
                    android:layout_below="@id/text_progress_title"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="22dp">

                    <com.example.datalibrary.view.CircularProgressView
                        android:id="@+id/progress_bar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:backColor="#292929"
                        app:backWidth="5dp"
                        app:progColor="#0D9EFF"
                        app:progWidth="5dp"></com.example.datalibrary.view.CircularProgressView>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true">

                        <TextView
                            android:id="@+id/text_progress"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:textColor="#05C5FF"
                            android:textSize="36sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBottom="@id/text_progress"
                            android:layout_toRightOf="@id/text_progress"
                            android:text="%"
                            android:textColor="#05C5FF"
                            android:textSize="18sp" />
                    </RelativeLayout>

                </RelativeLayout>

                <TextView
                    android:id="@+id/text_import_finish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/relative_progress_bar"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="16dp"
                    android:text="@string/data_statistics"
                    android:textColor="#CCCCCC" />

                <TextView
                    android:id="@+id/text_import_success"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_import_finish"
                    android:layout_alignLeft="@id/text_import_finish"
                    android:text="@string/import_success"
                    android:textColor="#CCCCCC" />

                <TextView
                    android:id="@+id/text_import_failure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_import_success"
                    android:layout_alignLeft="@id/text_import_finish"
                    android:text="@string/import_failure"
                    android:textColor="#CCCCCC" />
            </RelativeLayout>

            <View
                android:id="@+id/view_line"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_below="@id/relative_progress_num"
                android:layout_marginTop="20dp"
                android:background="@color/background" />

            <Button
                android:id="@+id/button_prog_close"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/view_line"
                android:background="#222222"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/button_close"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </RelativeLayout>


    </RelativeLayout>
</ScrollView>